--- a/app/webroot/.htaccess
+++ b/app/webroot/.htaccess
@@ -1,5 +1,7 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
+    RewriteRule ^events.php/event_show/([0-9]+)$ /events/show/$1 [R=301,L]
+    RewriteRule ^events.php/rss$ /events/rss [R=301,L]
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
